[panelview] Avoid assert if max < min

Max and min are calculated from two completely different sources.

There's scope for them to not be the expected way round.

We have an assert reported on this line due to a subtle qBound ->
std::clamp porting difference on GCC with debug flags on.

BUG: 454064


(cherry picked from commit 449ae169d823c24601625cc9c2f3e4e838da7fe3)